# aram_mayhem_helper

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: config.toml
data/: augment_trans.json
src/aram_mayhem_helper/: cli.py  gui.py
src/aram_mayhem_helper/algorithm/: suggest.py
src/aram_mayhem_helper/crawlers/ddragon/: champion_crawler.py
src/aram_mayhem_helper/crawlers/opgg/: aram_augment_crawler.py
src/aram_mayhem_helper/league_client_api/: live_data.py
src/aram_mayhem_helper/ocr/: ocr_tool.py
src/aram_mayhem_helper/utils/: config.py  data.py  log_config.py  norm.py  retry.py  text_normalization.py
